[gd_scene load_steps=2 format=3 uid="uid://b1imr05vt5tch"]

[ext_resource type="Script" path="res://Scripts/Options.gd" id="1_m4sdd"]

[node name="Options" type="CanvasLayer"]
script = ExtResource("1_m4sdd")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Back" type="Button" parent="."]
offset_left = 1792.0
offset_right = 1920.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 33
text = "Back"

[node name="SoundSliders" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -108.0
offset_right = 100.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2

[node name="MasterVolume" type="Label" parent="SoundSliders"]
layout_mode = 2
text = "Master Volume"

[node name="Master" type="HSlider" parent="SoundSliders"]
layout_mode = 2
min_value = -45.0
max_value = 0.0

[node name="Music" type="HSlider" parent="SoundSliders"]
layout_mode = 2
min_value = -45.0
max_value = 0.0

[node name="TestMusic" type="Button" parent="SoundSliders/Music"]
offset_left = 376.0
offset_top = -12.0
offset_right = 524.0
offset_bottom = 44.0
text = "Test Music Button"

[node name="MusicTest" type="AudioStreamPlayer" parent="SoundSliders/Music/TestMusic"]

[node name="VFX" type="HSlider" parent="SoundSliders"]
layout_mode = 2
min_value = -45.0
max_value = 0.0

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="SoundSliders/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="SoundSliders/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="SoundSliders/VFX" to="." method="_on_vfx_value_changed"]
